add spiess feedback

--- a/docs/Intro.mdx
+++ b/docs/Intro.mdx
@@ -1,7 +1,7 @@
 ---
 name: Introduction
 route: /
-order: 6
+order: 999
 ---
 
 # Introduction: What is Concurrent React?
@@ -10,9 +10,9 @@ Concurrent React is an umbrella name for a new set of APIs resulting from the Re
 It was previously known as "Async React".
 
 The new name emphasizes React's new ability concurrently render, suspend, and resume rendering frames 
-in the background while remaining interactive. This ability helps Concurrent React apps adapt to
-the user's device and network, allowing for fast interactions to feel instant while slower interactions
-feel responsive.
+in the background *while remaining interactive* (aka not destroying old frames while rendering the next). 
+This ability helps Concurrent React apps adapt to the user's device and network, 
+allowing for fast interactions to feel instant while slower interactions feel responsive.
 
 Concurrent React includes features like **Time Slicing** and **React Suspense**. 
 New libraries have also been introduced in relation to these features, like `scheduler` and `react-cache`.
@@ -23,6 +23,7 @@ As of 15 Oct 2018 these features were available under the `@canary` tag, or `v16
 - [react-dom](https://www.npmjs.com/package/react-dom/v/16.6.0-alpha.8af6728)
 - [react-cache](https://www.npmjs.com/package/react-cache/v/16.6.0-alpha.8af6728)
 - [scheduler](https://www.npmjs.com/package/scheduler/v/16.6.0-alpha.8af6728)
+- [create-subscription](https://www.npmjs.com/package/create-subscription/v/16.6.0-alpha.8af6728)
 
 This site is an attempt to sum up the state of knowledge with regards to Concurrent React. 
 It is curated by [swyx](http://twitter.com/swyx) and is not to be taken as a replacement for any 
@@ -57,6 +58,8 @@ render(
 
 This opt-in nature is very handy for incrementally converting an existing app to use Concurrent React features.
 **The other Concurrent React features will not work without this wrapper component as a parent.**
+
+*Note: Your app must be `<StrictMode>` compliant first before you apply `ConcurrentMode` - [read more about StrictMode in the docs](https://reactjs.org/docs/strict-mode.html)*
 
 ## What is Time Slicing?
 
