--- a/docs/misc-apis.mdx
+++ b/docs/misc-apis.mdx
@@ -1,9 +1,9 @@
 ---
 name: Misc APIs
-order: 1
+order: 333
 ---
 
-# `Misc APIs`
+# Misc APIs
 
 Other related APIs have been introduced with Concurrent React, but don't have official names as features.
 
