--- a/docs/time-slicing.mdx
+++ b/docs/time-slicing.mdx
@@ -1,6 +1,6 @@
 ---
-name: Time Slicing
-order: 5
+name: Scheduler and Time Slicing
+order: 888
 ---
 
 # Time-Slicing
@@ -15,6 +15,17 @@ DOM Updates have **high** and **low** priority.
 
 - **High Priority**: Updates involving user input (e.g. text inputs)
 - **Low Priority**: Updates involving data loading or expensive calculation
+
+*TODO: add screenshot showing sliced rendering.*
+
+**VERY IMPORTANT NOTE:** Concurrent React sets priorities for you by default. 
+If you are using `react-dom` event handlers, you do NOT need to use `scheduleCallback` or `flushSync`.
+
+ If you use React to listen to events (e.g `on*`), 
+ it will already pick the appropriate priority when you enqueue a state change 
+ (e.g a `onKeyDown` will be high priority and a `onMouseOver` low pri)
+
+The scheduler API below is more or less an escape hatch if you need more control.
 
 ## `scheduleCallback` Example 
 
