--- a/docs/hidden.mdx
+++ b/docs/hidden.mdx
@@ -5,6 +5,8 @@ order: 555
 
 # `hidden={true}`
 
+*Current API: not officially implemented*
+
 when a HTML component sets the `hidden={true}` property, React will automatically change the priority 
 of this subtree so that it won’t be part of the initial render. 
 The idea is to e.g have a tab component that can render out every window in advance so switching
