--- a/docs/create-subscription.mdx
+++ b/docs/create-subscription.mdx
@@ -11,5 +11,6 @@ create-subscription is a utility for subscribing to external data sources inside
 
 This utility should be used for subscriptions to a single value that are typically only read in one place and may update frequently (e.g. a component that subscribes to a geolocation API to show a dot on a map).
 
-Apologies, this is just a stub doc as I am not sure if I need this here yet. 
+**Apologies, this is just a stub doc as I am not sure if I need this here yet.**
+
 But please see their readme for usage examples: https://github.com/facebook/react/tree/master/packages/create-subscription#limitations-in-async-mode
