add community section

--- a/docs/Intro.mdx
+++ b/docs/Intro.mdx
@@ -1,7 +1,6 @@
 ---
 name: Introduction
 route: /
-order: 999
 ---
 
 # Introduction: What is Concurrent React?
@@ -83,6 +82,10 @@ For slow connections, it gives you full control over where and when to show a pl
 It doesn’t destroy the previous view while this is happening.
 
 --- 
+
+> Next: [Time Slicing](/docs-time-slicing)
+
+---
 
 **Recommended Sources for further info:**
 
