--- a/docs/hidden.mdx
+++ b/docs/hidden.mdx
@@ -1,6 +1,6 @@
 ---
-name: hidden={true}
-order: 555
+name: 4. hidden={true}
+menu: APIs
 ---
 
 # `hidden={true}`
@@ -13,6 +13,10 @@ The idea is to e.g have a tab component that can render out every window in adva
  tabs is super fast but it only needs to display the first tab’s content in the initial render so
   the hidden tabs can be deprioritized. 
 
+
+--- 
+
+> Next: [create-subscription](/docs-create-subscription)
 
 --- 
 
