--- a/docs/react-cache.mdx
+++ b/docs/react-cache.mdx
@@ -1,6 +1,6 @@
 ---
-name: react-cache
-order: 666
+name: 3. react-cache
+menu: APIs
 ---
 
 # `react-cache`
@@ -85,6 +85,10 @@ Thus it has the effect of "warming" the cache in the background.
 ## `resource.invalidate()` 
 
 `resource.invalidate()` clears the cache. In future we should have fine-grained key-based invalidation.
+
+--- 
+
+> Next: [hidden](/docs-hidden)
 
 --- 
 
