--- a/docs/react-suspense.mdx
+++ b/docs/react-suspense.mdx
@@ -1,6 +1,6 @@
 ---
-name: React Suspense
-order: 777
+name: 2. React Suspense
+menu: APIs
 ---
 
 # React Suspense
@@ -43,6 +43,10 @@ Caches should be idempotent and should **throw promises** to resolve data fetche
 Please see our `react-cache` section for how to write suspenders.
 
 Also see the React Suspense Fixture: [CodeSandBox](https://codesandbox.io/s/w0n9ok3mqw)
+
+--- 
+
+> Next: [React Cache](/docs-react-cache)
 
 --- 
 
