--- a/docs/time-slicing.mdx
+++ b/docs/time-slicing.mdx
@@ -1,6 +1,6 @@
 ---
-name: Scheduler and Time Slicing
-order: 888
+name: 1. Scheduler and Time Slicing
+menu: APIs
 ---
 
 # Time-Slicing
@@ -54,6 +54,10 @@ The scheduler API below is more or less an escape hatch if you need more control
 ```
 
 Also see the Time Slicing Fixture: [Live Demo](https://timeslicing-unstable-demo.surge.sh/) and [Source Code](https://github.com/facebook/react/tree/master/fixtures/unstable-async/time-slicing)
+
+--- 
+
+> Next: [React Suspense](/docs-react-suspense)
 
 --- 
 
