--- a/docs/create-subscription.mdx
+++ b/docs/create-subscription.mdx
@@ -1,7 +1,9 @@
 ---
-name: create-subscription
-order: 444
+name: 5. create-subscription
+menu: APIs
 ---
+
+> Apologies, this is just a stub doc as I am not sure if I need this here yet.
 
 # `create-subscription`
 
@@ -11,6 +13,11 @@ create-subscription is a utility for subscribing to external data sources inside
 
 This utility should be used for subscriptions to a single value that are typically only read in one place and may update frequently (e.g. a component that subscribes to a geolocation API to show a dot on a map).
 
-**Apologies, this is just a stub doc as I am not sure if I need this here yet.**
 
 But please see their readme for usage examples: https://github.com/facebook/react/tree/master/packages/create-subscription#limitations-in-async-mode
+
+
+--- 
+
+> Next: [Misc APIs](/docs-misc-apis)
+
