--- a/docs/hidden.mdx
+++ b/docs/hidden.mdx
@@ -1,6 +1,5 @@
 ---
-name: 4. hidden={true}
-order: 555
+name: hidden
 menu: APIs
 ---
 
@@ -17,7 +16,7 @@ The idea is to e.g have a tab component that can render out every window in adva
 
 --- 
 
-> Next: [create-subscription](/docs-create-subscription)
+> Next: [Misc APIs](/docs-misc-apis)
 
 --- 
 
