--- a/Daily/2021-12-01.md
+++ b/Daily/2021-12-01.md
@@ -2,4 +2,5 @@ today i setup obsidian!
 
 ported over my simplenote stuff over
 
-test
+listened to
+- https://www.snowflake.com/podcast/bill-michels/
